# open-ereader

./: .gitignore  README.md
firmware/: CMakeLists.txt
firmware/lib/display/: CMakeLists.txt  epd7in5_V2.cpp  epd7in5_V2.h  epdif.cpp  epdif.h  imagedata.cpp  imagedata.h
firmware/src/: ereader_test.cpp
